# audera

./: .gitignore  README.md  requirements.txt  setup.cfg
audera/: __init__.py  ap.py  audio.py  client.py  devices.py  logging.py  mdns.py  netifaces.py  ntp.py  platform.py  player.py  server.py  sessions.py  streamer.py
audera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
audera/cli/: __init__.py  audera.py  commands.py
audera/dal/: __init__.py  device.py  devices.py  groups.py  identities.py  interfaces.py  path.py  players.py  sessions.py
audera/struct/: __init__.py  audio.py  identity.py  player.py  session.py
audera/ui/: __init__.py
audera/ui/player/: __init__.py  setup.py
docs/deployment-architectures/: README.md
docs/how-it-works/: README.md
os/dietpi/client/: dietpi.txt
os/dietpi/client/automation/: autostart.sh  setup.sh
os/dietpi/client/conf/: shairport-sync.conf
os/dietpi/player/: dietpi.txt
os/dietpi/player/automation/: autostart.sh  setup.sh
os/dietpi/player/conf/: shairport-sync.conf
