[metadata]
name = audera
description = `audera` is an open-source multi-room audio streaming system written in Python for DIY home entertainment enthusiasts.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Eleff
project_urls =
    Issues = https://github.com/thomaseleff/audera/issues
    Releases = https://github.com/thomaseleff/audera/releases
classifiers =
    Development Status :: 4 - Beta
    Topic :: Database :: Front-Ends
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
python_requires = >=3.11.0
install_requires =
    pyaudio==0.2.14
    ntplib==0.4.0
    zeroconf==0.136.2
    coolname==2.2.0
    duckdb==1.1.3
    pytensils==1.3.0
    netifaces==0.11.0
    nicegui==2.11.1
    python-dotenv==1.1.0

[options.entry_points]
console_scripts =
    audera = audera.cli.audera:main